# SWaN

./: MANIFEST.in  README.md  setup.cfg  setup.py  setupOld.py
SWaN/: LogisticRegression_all_data_F1score_0.70.sav  README.md  SWaN.py  StandardScalar_all_data.sav  _helper.py  _root.py  activation.py  classify.py  config.py  energy.py  feature_set.py  main.py  orientation.py  requirements.txt  setup.py  spectrum.py  stats.py  swan_first_pass.py  swan_second_pass.py
SWaN-accel/: _helper.py  activation.py  energy.py  orientation.py  swan_second_pass.py
SWaN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SWaN/SWaN_pack/: orientation.py  stats.py
SWaN/SWaN_pack/model/old/: LogisticRegression_all_data_F1score_0.51.sav  StandardScalar_all_data.sav  ori_change_use.csv
SWaN/model/: StandardScalar_all_data.sav
SWaN_accel/: activation.py  classify.py  energy.py  requirements.txt  stats.py  swan_second_pass.py
SWaN_accel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SWaN_pack/: config.py  feature_set.py  spectrum.py
lib/SWaN_pack/: setup.py
lib/SWaN_pack/SWaN_pack/: activation.py  detect_peaks.py  energy.py
