[metadata]
# replace with your username:
name = SWaN_accel
version = 1.2
author = binodtc
author_email = binod.thapachhetry@gmail.com
description = A pacakge to classify sleep-wear, wake-wear, and non-wear in accelerometer dataset.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/mhealthresearchgroup/packageswanfortime.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    find:
    scikit-learn==0.23.2

python_requires = >=3.6